# iFire-IOT

./: CMakeLists.txt  Kconfig.projbuild  MQTT_app.c  UART.c  WiFi_Connect.c  db611f9b28db2b68141d0945315bed82723ecb3bf02f8b45fcaf488f879169f3_certificate.pem.crt  db611f9b28db2b68141d0945315bed82723ecb3bf02f8b45fcaf488f879169f3_private.pem.key  main.c  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: AES_CBC.c.C9A7396CF7E16E17.idx  AES_CBC.c.CAA86760C33627F7.idx  AES_CBC.h.B97F4A11991FE252.idx  BLE.c.F7D0982AC009CEAE.idx  CRC.c.92D65786C8FC5F2C.idx  CRC8.c.A83A6AEFC77C87D2.idx  Globals.c.F7C7F0C0F5C60620.idx  Globals.h.3FD57BA41793EDB8.idx  MQTT_app.c.0AC168480E023C52.idx  MQTT_app.c.3CA354646C757F61.idx  MQTT_app.h.24D7BCA60AB6EBAA.idx  ProtocolsChar.h.0001EEAE2D63F852.idx  ProtocolsChar.h.76C1CD544957E28C.idx  ProtocolsChar.h.D09B8AE691BDA909.idx  UART.c.905BF35C018F13EE.idx  UART_config.c.0A5A921C64DC8F03.idx  UART_config.c.D155CAA2A1E2FDC0.idx  WiFi_Connect.c.3B0B5DDA6878C94C.idx  WiFi_Connect.c.704FE4F86B850A41.idx  WiFi_Connect.c.C1B987F175602385.idx  WiFi_Connect.h.D97B07CA7DF755E3.idx  WiFi_Scan.c.414FD0F3FB53C993.idx  WiFi_Scan.c.BD4B57E2F334E8DC.idx  WiFi_Scan.h.D1FC286766611A6A.idx  (+20 more)
main/: AES_CBC.c  BLE.c  CMakeLists.txt  Kconfig.projbuild  MQTT_app.c  UART_config.c  WiFi_Connect.c  WiFi_Scan.c  app_main_StateMachine.c  check.c  dealwith_MCU_data.c  firmware_updata.c  ota_check.c
main/HEAD/: AES_CBC.h  MQTT_app.h  ProtocolsChar.h  WiFi_Connect.h  WiFi_Scan.h  app_main_StateMachine.h  check.h  dealwith_MCU_data.h  gatts_table.h
